# labor-distribution-game

./: README.md  main.py  pyproject.toml
configs/: default.yaml  environment_config.yaml  training_config.yaml
notebooks/: agent_behavior_analysis.ipynb  simulation_analysis.ipynb
src/: main.py
src/agents/: agent_base.py  level1_agent.py  level2_agent.py
src/environment/: coalition.py  game.py  news_generator.py
src/evaluation/: metrics.py  visualizer.py
src/models/: memory_buffer.py  policy_network.py  transformer.py
src/training/: optimization.py  ppo_trainer.py  sac_trainer.py
src/utils/: embeddings.py  logger.py  owen.py  shapley.py
tests/: test_agents.py  test_utils.py
